--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "炒饭 <chaofan@2dfire.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "webpack --watch --hide-modules",
+    "dev": "webpack-dev-server --progress --inline --hot --host 0.0.0.0 --port 7778",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
@@ -21,8 +21,11 @@
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-preset-es2017": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "eslint": "^3.19.0",
     "eslint-plugin-react": "^7.0.1",
-    "react-loader": "^2.4.2"
+    "jsx-loader": "^0.13.2",
+    "react-loader": "^2.4.2",
+    "webpack-dev-server": "^2.4.5"
   }
 }
