--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "炒饭 <chaofan@2dfire.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "webpack-dev-server --progress --inline --hot --host 0.0.0.0 --port 7778",
+    "dev:react": "cd shells/react && webpack-dev-server --progress --inline --hot --host 0.0.0.0 --port 7778",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
@@ -24,6 +24,7 @@
     "babel-preset-react": "^6.24.1",
     "eslint": "^3.19.0",
     "eslint-plugin-react": "^7.0.1",
+    "html-webpack-plugin": "^2.28.0",
     "jsx-loader": "^0.13.2",
     "react-loader": "^2.4.2",
     "webpack-dev-server": "^2.4.5"
