--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "clean-webpack-plugin": "^0.1.16",
     "copy-webpack-plugin": "^4.0.1",
     "eslint": "^3.19.0",
+    "eslint-config-vue": "^2.0.2",
     "eslint-plugin-react": "^7.0.1",
+    "eslint-plugin-vue": "^2.0.1",
     "html-webpack-plugin": "^2.28.0",
     "jsx-loader": "^0.13.2",
     "ora": "^1.2.0",
