--- a/package.json
+++ b/package.json
@@ -23,17 +23,24 @@
     "babel-loader": "^7.0.0",
     "babel-preset-es2017": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "classnames": "^2.2.5",
     "clean-webpack-plugin": "^0.1.16",
     "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.28.4",
+    "debug": "^2.6.8",
     "eslint": "^3.19.0",
     "eslint-config-vue": "^2.0.2",
     "eslint-plugin-react": "^7.0.1",
     "eslint-plugin-vue": "^2.0.1",
     "html-webpack-plugin": "^2.28.0",
     "jsx-loader": "^0.13.2",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.4",
     "ora": "^1.2.0",
+    "react-css-modules": "^4.3.0",
     "react-loader": "^2.4.2",
     "shelljs": "^0.7.7",
+    "style-loader": "^0.18.2",
     "webpack-dev-server": "^2.4.5"
   }
 }
