--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "scripts": {
     "dev:weapp": "cd shells/weapp && webpack --watch --display-chunks",
+    "dev:weapp:css": "cd shells/weapp && gulp watch",
     "dev:weapp-bill": "cd shells/weapp-bill && webpack --watch --display-chunks",
     "dev:react": "cd shells/react && webpack-dev-server --progress --inline --hot --host 0.0.0.0 --port 7778",
     "dev:react-bill": "cd shells/react-bill && webpack-dev-server --progress --inline --hot --host 0.0.0.0 --port 7779",
@@ -36,6 +37,10 @@
     "eslint-plugin-react": "^7.0.1",
     "eslint-plugin-vue": "^2.0.1",
     "flux": "^3.1.2",
+    "gulp": "^3.9.1",
+    "gulp-debug": "^3.1.0",
+    "gulp-less": "^3.3.0",
+    "gulp-sourcemaps": "^2.6.0",
     "html-webpack-plugin": "^2.28.0",
     "jsx-loader": "^0.13.2",
     "keymirror": "^0.1.1",
